# FITS-frontend

./: .env  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
data/: fits.gresource.xml
data/resources/: fck-ihk.gresource.xml  fits.gresource.xml  style.css
data/resources/blueprints/: activity.blp  activity.ui  initial_setup.blp  initial_setup.ui  main_window.blp  main_window.ui  premade.blp  premade.ui  weekly_view.blp  weekly_view.ui  writer_window.blp  writer_window.ui
data/resources/protobuf/: report.proto
examples/: README.md  api_auth.rs  api_auth_logout.rs  api_auth_refresh.rs  api_health_check.rs  api_invitations.rs  api_signing.rs
scripts/IHKScraper/: extractToken.py
src/: common.rs  gui.rs  lib.rs  local.rs  main.rs
src/api/: auth.rs  handler.rs  invitations.rs  mod.rs  signing.rs
src/gui/: actions.rs  templates.rs  widgets.rs
src/local/: db.rs  keyring.rs  paths.rs  sqlite.rs
src/local/db/: connector.rs  queries.rs  schema.rs
src/local/sqlite/: schemas.rs
