[package]
name = "fits"
version = "0.2.0"
edition = "2024"

# GUI
[dependencies.gtk]
version = "0.10.0"
package = "gtk4"
features = ["v4_14", "blueprint"]

# More GUI
[dependencies.adw]
version = "0.8.0"
package = "libadwaita"
features = ["v1_5"]

# For storing sensitive data
[dependencies.keyring]
version = "3.6.3"
features = ["apple-native", "windows-native", "linux-native-sync-persistent"]

# Config
[dependencies.serde]
version = "1.0.226"
features = ["derive"]

[dependencies]
# Logger
env_logger = "0.11.8"
# Logging
log = "0.4.27"
# Config format
toml = { version = "0.9.7", features = ["serde"] }
# High-level abstractions over arrow
datafusion = "50.0"

[build-dependencies]
glib-build-tools = "0.21.0"
