[package]
name = "fits"
version = "0.2.0"
edition = "2024"

# GUI
[dependencies.gtk]
version = "0.10.0"
package = "gtk4"
features = ["v4_14", "blueprint"]

# More GUI
[dependencies.adw]
version = "0.8.0"
package = "libadwaita"
features = ["v1_5"]

# For storing sensitive data
[dependencies.keyring]
version = "3.6.3"
features = ["apple-native", "windows-native", "linux-native-sync-persistent"]

# Config
[dependencies.serde]
version = "1.0.226"
features = ["derive"]

[dependencies]
# Logger
env_logger = "0.11.8"
# Logging
log = "0.4.27"
# Config format
toml = { version = "0.9.7", features = ["serde"] }
# Database, the final
diesel = { version = "2.3.2", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
# Time and things
chrono = { version = "0.4.42", features = ["serde"] }
# Send things over the network
serde_json = "1.0.145"
# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Environment variable loading
dotenvy = "0.15"

[build-dependencies]
glib-build-tools = "0.21.0"

[[example]]
name = "api_health_check"
path = "examples/api_health_check.rs"
